update latest dependencies